--- a/styles/global.css
+++ b/styles/global.css
@@ -2,7 +2,7 @@ body, html {
   margin: 0px;
   padding: 0px;
   overflow: hidden;
-  background-image: url(../public/images/tile.png);
+  background-image: url(/images/tile.png);
   background-repeat: repeat;
   background-size: 30px 30px;
   background-color: #FBFBFB;
